--- a/lookandfeel/autotests/lockscreen/CMakeLists.txt
+++ b/lookandfeel/autotests/lockscreen/CMakeLists.txt
@@ -5,3 +5,4 @@ add_test(NAME testlockscreen
     COMMAND lockscreentest
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
+set_tests_properties(testlockscreen PROPERTIES ENVIRONMENT "QML_DISABLE_DISK_CACHE=1")
