clipboardtest: set failfast
This prevents it from hanging in CI for too long time

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -53,7 +53,7 @@ set_tests_properties(calendartest PROPERTIES TIMEOUT 120)
 
 add_test(
     NAME clipboardtest
-    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/clipboardtest.py
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/clipboardtest.py --failfast
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 set_tests_properties(clipboardtest PROPERTIES TIMEOUT 120)
