Use QDBus interfaces for GTK menus and actions

--- a/gmenu-dbusmenu-proxy/CMakeLists.txt
+++ b/gmenu-dbusmenu-proxy/CMakeLists.txt
@@ -20,9 +20,21 @@ set(GMENU_DBUSMENU_PROXY_SRCS
     icons.cpp
     utils.cpp
     ../libdbusmenuqt/dbusmenutypes_p.cpp
- )
+)
 
 qt_add_dbus_adaptor(GMENU_DBUSMENU_PROXY_SRCS ../libdbusmenuqt/com.canonical.dbusmenu.xml window.h Window)
+
+set_source_files_properties(org.gtk.Actions.xml PROPERTIES
+        NO_NAMESPACE true
+        INCLUDE "gdbusmenutypes_p.h"
+)
+qt_add_dbus_interface(GMENU_DBUSMENU_PROXY_SRCS org.gtk.Actions.xml gtkactions_interface)
+
+set_source_files_properties(org.gtk.Menus.xml PROPERTIES
+        NO_NAMESPACE true
+        INCLUDE "gdbusmenutypes_p.h"
+)
+qt_add_dbus_interface(GMENU_DBUSMENU_PROXY_SRCS org.gtk.Menus.xml gtkmenus_interface)
 
 ecm_qt_declare_logging_category(GMENU_DBUSMENU_PROXY_SRCS HEADER debug.h
                                                IDENTIFIER DBUSMENUPROXY
