libkmpris: unconditionally disconnect from container
Otherwise when a browser is filtered out but the source container is not
deleted, it can still emit playbackStatusChanged signal, which will
trigger the assertion in Multiplexer::updateIndex() because the original
browser is already filtered out by Mpris2FilterProxyModel.

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -96,7 +96,7 @@ set_tests_properties(digitalclocktest PROPERTIES TIMEOUT 300)
 
 add_test(
     NAME mediacontrollertest
-    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/mediacontrollertest.py ${CMAKE_BINARY_DIR}
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/mediacontrollertest.py --failfast ${CMAKE_BINARY_DIR}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 execute_process(COMMAND gcc -print-file-name=libasan.so OUTPUT_VARIABLE LIBASAN_PATH ECHO_OUTPUT_VARIABLE OUTPUT_STRIP_TRAILING_WHITESPACE)
