kcms/cursortheme: test cursor preview

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -145,6 +145,7 @@ set_tests_properties(kcm_colors_test PROPERTIES TIMEOUT 120)
 add_test(
     NAME kcm_cursortheme_test
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_cursortheme_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 set_tests_properties(kcm_cursortheme_test PROPERTIES TIMEOUT 120)
 
