applets/notifications: forward wheel events to outer ScrollView
As QML TextEdit absorbs all wheel events, a wheel forwarder is added to
help forward wheel events. This improves the smooth scrolling effect.

--- a/applets/notifications/CMakeLists.txt
+++ b/applets/notifications/CMakeLists.txt
@@ -7,6 +7,7 @@ set(notificationapplet_SRCS
     globalshortcuts.cpp
     jobaggregator.cpp
     thumbnailer.cpp
+    wheelforwarder.cpp
     notificationapplet.h
     fileinfo.h
     filemenu.h
