Only install systemd files when systemd is actually present on the system
Not all Linux systems use systemd.
e54bd896ce1e8daaeb29b67d6e40c95ec83c5db5 already introduced a proper
SYSTEMD_FOUND check so we can just reuse that.

--- a/startkde/CMakeLists.txt
+++ b/startkde/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(plasmaautostart)
 add_subdirectory(kcminit)
 add_subdirectory(waitforname)
 
-if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+if (SYSTEMD_FOUND)
     add_subdirectory(systemd)
 endif()
 
