--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -80,6 +80,7 @@ RuntimeDependencies:
 - 'on': ['Linux']
   'require':
     'network/kio-extras': '@latest-kf6'
+    'plasma/powerdevil': '@same'
     'sdk/selenium-webdriver-at-spi': '@latest-kf6'
 - 'on': ['Linux', 'FreeBSD']
   'require':
