--- a/applets/kicker/plugin/autotests/CMakeLists.txt
+++ b/applets/kicker/plugin/autotests/CMakeLists.txt
@@ -20,3 +20,4 @@ ecm_add_test(
     testrunnermodel.cpp
     LINK_LIBRARIES kickerplugin Qt::Test
 )
+set_tests_properties(testrunnermodel PROPERTIES REPEAT UNTIL_PASS:2)
