--- a/startkde/CMakeLists.txt
+++ b/startkde/CMakeLists.txt
@@ -43,6 +43,8 @@ target_link_libraries(startplasma-wayland PRIVATE
 
 add_subdirectory(plasma-session)
 add_subdirectory(plasma-shutdown)
+add_subdirectory(session-shortcuts)
+
 
 #FIXME: reconsider, looks fishy
 if(NOT CMAKE_INSTALL_PREFIX STREQUAL "/usr")
