digitialclock: Use icu to look up exemplar cities for time zones
This removes the burden from us of having to maintain this hand crafted
list. On top these strings were not extracted since two years ago
when they were moved from a .cpp to a .h file
(see 30fc2d99875fa6d7cbabffeac07914546251e1b6.
Also simplify the double loop and the multiple string splits and
copncatentations while preserving the logic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,8 +312,8 @@ endif()
 find_package(ICU COMPONENTS i18n uc)
 set_package_properties(ICU
         PROPERTIES DESCRIPTION "Unicode and Globalization support for software applications"
-        TYPE OPTIONAL
-        PURPOSE "Better application groups in Kicker"
+        TYPE REQUIRED
+        PURPOSE "Better application groups in Kicker, timezone support"
         )
 if(${ICU_FOUND})
     set(HAVE_ICU TRUE)
