--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -53,6 +53,7 @@ Dependencies:
     'frameworks/prison': '@latest-kf6'
     'frameworks/kwayland': '@latest-kf6'
     'frameworks/kstatusnotifieritem': '@latest-kf6'
+    'frameworks/kuserfeedback': '@latest-kf6'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
     'plasma/libkscreen': '@same'
