--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -7,8 +7,6 @@ Dependencies:
     'frameworks/attica': '@latest-kf6'
     'frameworks/baloo': '@latest-kf6'
     'frameworks/extra-cmake-modules': '@latest-kf6'
-    'frameworks/kactivities': '@latest-kf6'
-    'frameworks/kactivities-stats': '@latest-kf6'
     'frameworks/kauth': '@latest-kf6'
     'frameworks/kbookmarks': '@latest-kf6'
     'frameworks/kcmutils': '@latest-kf6'
@@ -62,6 +60,8 @@ Dependencies:
     'plasma/kpipewire': '@same'
     'plasma/plasma-nano': '@same'
     'plasma/plasma5support': '@same'
+    'plasma/kactivities': '@latest-kf6' # Different branch scheme due to formerly being a Framework
+    'plasma/kactivities-stats': '@latest-kf6' # Different branch scheme due to formerly being a Framework
     'libraries/plasma-wayland-protocols': '@latest-kf6'
     'libraries/kuserfeedback': '@latest-kf6'
     'libraries/phonon': '@latest-kf6'
