Adapt to plasma-framework moving to Plasma

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -41,7 +41,6 @@ Dependencies:
     'frameworks/kwidgetsaddons': '@latest-kf6'
     'frameworks/kwindowsystem': '@latest-kf6'
     'frameworks/kxmlgui': '@latest-kf6'
-    'frameworks/plasma-framework': '@latest-kf6'
     'frameworks/solid': '@latest-kf6'
     'frameworks/sonnet': '@latest-kf6'
     'frameworks/kholidays': '@latest-kf6'
@@ -52,6 +51,7 @@ Dependencies:
     'frameworks/kwayland': '@latest-kf6'
     'frameworks/kstatusnotifieritem': '@latest-kf6'
     'frameworks/kuserfeedback': '@latest-kf6'
+    'plasma/plasma-framework': '@same'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
     'plasma/libkscreen': '@same'
