Adapt to plasma-framework moving to Plasma

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -39,7 +39,6 @@ Dependencies:
     'frameworks/kwidgetsaddons': '@latest'
     'frameworks/kwindowsystem': '@latest'
     'frameworks/kxmlgui': '@latest'
-    'frameworks/plasma-framework': '@latest'
     'frameworks/solid': '@latest'
     'frameworks/sonnet': '@latest'
     'frameworks/kholidays': '@latest'
@@ -49,6 +48,7 @@ Dependencies:
     'frameworks/kpeople': '@latest'
     'frameworks/prison': '@latest'
     'frameworks/kuserfeedback': '@stable'
+    'plasma/plasma-framework': 'kf5'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
     'plasma/libkscreen': '@same'
