--- a/libcolorcorrect/LibColorCorrectConfig.cmake.in
+++ b/libcolorcorrect/LibColorCorrectConfig.cmake.in
@@ -3,6 +3,6 @@
 include(CMakeFindDependencyMacro)
 find_dependency(Qt6Core "@QT_MIN_VERSION@")
 find_dependency(Qt6Quick "@QT_MIN_VERSION@")
-find_dependency(KF6Plasma "@KF6_MIN_VERSION@")
+find_dependency(KF6Plasma "@PROJECT_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/LibColorCorrectLibraryTargets.cmake")
