--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,11 +45,11 @@ find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Svg Widgets Quick 
 find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
                     Auth Parts Runner Notifications NotifyConfig NewStuff Wallet IdleTime
                     Svg Declarative I18n KCMUtils TextWidgets Crash GlobalAccel DBusAddons
-                    CoreAddons KIO Prison PlasmaQuick Package
+                    CoreAddons KIO Prison Package
                     GuiAddons Archive ItemModels IconThemes UnitConversion TextEditor StatusNotifierItem
                     OPTIONAL_COMPONENTS DocTools)
 find_package(KF6 ${PROJECT_VERSION} REQUIRED COMPONENTS
-                    Plasma Plasma5Support Wayland ActivitiesStats Activities)
+                    Plasma PlasmaQuick Plasma5Support Wayland ActivitiesStats Activities)
 
 if (BUILD_TESTING)
     include(ECMAddTests)
