--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -48,9 +48,9 @@ Dependencies:
     'frameworks/kded': '@latest-kf6'
     'frameworks/kdesu': '@latest-kf6'
     'frameworks/prison': '@latest-kf6'
-    'frameworks/kwayland': '@latest-kf6'
     'frameworks/kstatusnotifieritem': '@latest-kf6'
     'frameworks/kuserfeedback': '@latest-kf6'
+    'plasma/kwayland': '@same'
     'plasma/plasma-framework': '@same'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
