Move components module out of breeze lnf theme
So it doesnt get caught by the catch all install.

--- a/lookandfeel/CMakeLists.txt
+++ b/lookandfeel/CMakeLists.txt
@@ -4,19 +4,19 @@ plasma_install_package(org.kde.breezetwilight org.kde.breezetwilight.desktop loo
 
 ecm_add_qml_module(components URI "org.kde.breeze.components" NO_GENERATE_PLUGIN_SOURCE)
 ecm_target_qml_sources(components SOURCES
-    org.kde.breeze/components/animation/RejectPasswordAnimation.qml
-    org.kde.breeze/components/animation/RejectPasswordPathAnimation.qml
-    org.kde.breeze/components/ActionButton.qml
-    org.kde.breeze/components/Battery.qml
-    org.kde.breeze/components/Clock.qml
-    org.kde.breeze/components/SessionManagementScreen.qml
-    org.kde.breeze/components/UserDelegate.qml
-    org.kde.breeze/components/UserList.qml
-    org.kde.breeze/components/VirtualKeyboard.qml
-    org.kde.breeze/components/VirtualKeyboard_wayland.qml
-    org.kde.breeze/components/WallpaperFader.qml
+    components/animation/RejectPasswordAnimation.qml
+    components/animation/RejectPasswordPathAnimation.qml
+    components/ActionButton.qml
+    components/Battery.qml
+    components/Clock.qml
+    components/SessionManagementScreen.qml
+    components/UserDelegate.qml
+    components/UserList.qml
+    components/VirtualKeyboard.qml
+    components/VirtualKeyboard_wayland.qml
+    components/WallpaperFader.qml
 )
-target_sources(components PRIVATE org.kde.breeze/components/componentsplugin.cpp)
+target_sources(components PRIVATE components/componentsplugin.cpp)
 ecm_finalize_qml_module(components DESTINATION ${KDE_INSTALL_QMLDIR})
 
 qt_add_shaders(components LNFSHADERS
@@ -25,8 +25,8 @@ qt_add_shaders(components LNFSHADERS
     OPTIMIZED
     PREFIX "/qt/qml/org/kde/breeze/components/shaders/"
     FILES
-        org.kde.breeze/components/UserDelegate.frag
-        org.kde.breeze/components/WallpaperFader.frag
+        components/UserDelegate.frag
+        components/WallpaperFader.frag
     OUTPUTS
         UserDelegate.frag.qsb
         WallpaperFader.frag.qsb
