applets: split battery and brightness
Closes: #93

BUG: 424283

FIXED-IN: 6.0

--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -8,6 +8,7 @@ plasma_install_package(manage-inputmethod org.kde.plasma.manage-inputmethod)
 add_subdirectory(appmenu)
 add_subdirectory(systemmonitor)
 add_subdirectory(batterymonitor)
+add_subdirectory(brightness)
 add_subdirectory(calendar)
 add_subdirectory(devicenotifier)
 add_subdirectory(digital-clock)
