reliably lookup preferred browser from scheme mimetype first
we have a number of options here with varying degrees of legacy.

- x-scheme-handler/http mimetype is the modern way to define a browser
- text/html is a previous dated way to define a browser
- kdeglobals BrowserApplication is an incredibly dated way

whenever we looked for one of them, now look for all three and do so in
the correct order. the code was also slightly reshuffled to return as
soon as possible when a match is found to ease reading

--- a/libkworkspace/CMakeLists.txt
+++ b/libkworkspace/CMakeLists.txt
@@ -11,6 +11,7 @@ set(kworkspace_LIB_SRCS kdisplaymanager.cpp
     autostartscriptdesktopfile.h
     login1_manager_interface.cpp
     login1_manager_interface.h
+    defaultservice.cpp
    )
 
 add_definitions(-DTRANSLATION_DOMAIN=\"libkworkspace\")
@@ -44,6 +45,7 @@ target_link_libraries(kworkspace
         KF6::I18n
         KF6::WindowSystem
         KF6::ConfigCore
+        KF6::Service
 )
 target_include_directories(kworkspace PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
                                       INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}/kworkspace6>" )
